<resources>
    <string name="app_name">Real Estate Manager</string>

    // BOTTOM NAVIGATION MENU
    <string name="bottom_navigation_menu_information">Information</string>
    <string name="bottom_navigation_menu_location">Location</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="menu_tools" translatable="false">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="toolbar_search">Search</string>
    <string name="toolbar_add">ADD</string>
    <string name="toolbar_management">MANAGEMENT</string>
    <string name="input_text">Input text</string>
    <string name="description">Description</string>
    <string name="type">Type</string>
    <string name="price">Price</string>
    <string name="address">Address</string>
    <string name="rooms">Rooms</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="bathrooms">Bathrooms</string>
    <string name="surface">Surface (m²)</string>
    <string name="author">Author</string>
    <string name="type_property">Type:</string>
    <string name="price_property">Price:</string>
    <string name="author_property">Author:</string>
    <string name="entry_date_property">Date:</string>
    <string name="surface_property">Surface:</string>
    <string name="rooms_property">Rooms:</string>
    <string name="bedrooms_property">Bedrooms:</string>
    <string name="bathrooms_property">Bathrooms:</string>
    <string name="sale_date_property">Sale date:</string>
    <string name="status_property">Status:</string>
    <string name="not_available">Not Available</string>
    <string name="availability">Availability</string>
    <string name="missing_information">Missing information</string>
    <string name="title_activity_property_management" translatable="false">Management</string>
    <string name="message_error">An error has occurred, please try again</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="text_name">Image name</string>
    <string name="save_property">You have saved a new property.</string>
    <string name="city">City</string>
    <string name="zip_code">ZIP Code</string>
    <string name="add_address">Add. address</string>
    <string name="location_not_found">Location not found, please check address information (address, add. address, ZIP code and city)</string>
    <string name="address_details">address: </string>
    <string name="input_text_optional">Input text (Optional)</string>
    <string name="settings">Settings</string>
    <string name="parameters">Settings</string>
    <string name="surface_in_m">Surface (In m²)</string>
    <string name="price_in_dollars">Price (In dollars)</string>
    <string name="search">Search</string>
    <string name="price_in_dollars_0_at_500000000">Price (In dollars) : 0 – 500000000</string>
    <string name="surface_in_m_0_at_5000">Surface (In m²) : 0 – 5000</string>
    <string name="bedroom_0_100">Bedroom : 0 – 100</string>
    <string name="room_0_100">Room : 0 – 100</string>
    <string name="bathroom_0_100">Bathroom : 0 – 100</string>
    <string name="map" translatable="false">MAP</string>
    <string name="not_found_localisation">Your position is not found</string>
    <string name="missing_permission">Missing Permission</string>
    <string name="need_permission_text">Missing Permission</string>
    <string name="need_permission">Permission needed</string>

    <string-array name="available">
        <item> Available </item>
        <item> Sold </item>
    </string-array>

    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string-array name="available_search">
        <item></item>
        <item> Available </item>
        <item> Sold </item>
    </string-array>
    <string name="textview_propertydetails" translatable="false">%1$s %2$s</string>
    <string name="category_numberstart_numberend" translatable="false">%1$s : %2$d - %3$d</string>
    <string name="select_on_option">Select an option</string>
    <string name="price_dollars">Price (Dollars)</string>
    <string name="surface_number">Surface (In m²)</string>
    <string name="number_room">Room</string>
    <string name="number_bedroom">Bedroom</string>
    <string name="number_bathroom">Bathroom</string>
    <string name="manage">Management</string>
    <string name="select_property">Please select a property</string>
    <string name="no_internet">You can not, you must be connected to the internet.</string>

</resources>
