<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:actionbarcompat_mse="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_toolbar_map"
        android:icon="@drawable/image_map"
        android:orderInCategory="0"
        android:title="@string/map"
        actionbarcompat_mse:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_toolbar_add"
        android:icon="@drawable/image_add"
        android:orderInCategory="0"
        android:title="@string/toolbar_add"
        actionbarcompat_mse:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_toolbar_search"
        android:icon="@drawable/image_search"
        android:orderInCategory="0"
        android:title="@string/toolbar_search"
        actionbarcompat_mse:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_toolbar_manage"
        android:icon="@drawable/image_pen"
        android:orderInCategory="0"
        android:title="@string/manage"
        actionbarcompat_mse:showAsAction="ifRoom" />
</menu>