<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_details_content"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_photos_property_fragment"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginTop="10dp" />

            <TextView
                android:id="@+id/textView_description_property_fragment"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="5dp"
                android:ellipsize="end"
                android:maxLines="7" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_type_property"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="20dp"
                        android:text="@string/type_property"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView_price_property"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/price_property"
                        android:textSize="16sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="13dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_author_property"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="20dp"
                        android:text="@string/author_property"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView_entry_sale_property"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/entry_date_property"
                        android:textSize="16sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="13dp"

                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_surface_property"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="20dp"
                        android:text="@string/surface_property"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView_rooms_property"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/rooms_property"
                        android:textSize="16sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="13dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_bedrooms_property"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="20dp"
                        android:text="@string/bedrooms_property"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView_bathrooms_property"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/bathrooms_property"
                        android:textSize="16sp" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_sale_date_property"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="20dp"
                        android:text="@string/sale_date_property"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/textView_status_property"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/status_property"
                        android:textSize="16sp" />

                </RelativeLayout>

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</FrameLayout>