<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/main_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_button_add_property_management"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="20dp"
                    android:src="@drawable/image_add_2" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView_media_property_management"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/description"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText_description_property_management"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/input_text"
                    android:maxLength="500"
                    android:paddingStart="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/type"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText_type_property_management"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/input_text"
                    android:maxLength="30"
                    android:paddingStart="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/city"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText_city_property_management"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/input_text"
                    android:maxLength="50"
                    android:paddingStart="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/zip_code"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText_zipcode_property_management"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="15" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/address"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText_address_property_management"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/input_text"
                    android:maxLength="50"
                    android:paddingStart="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/add_address"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText_addaddress_property_management"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/input_text_optional"
                    android:maxLength="50"
                    android:paddingStart="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/author"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText_author_property_management"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:hint="@string/input_text"
                    android:maxLength="30"
                    android:paddingStart="10dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/price"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText_price_property_management"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="10"
                    android:text="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/rooms"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText_rooms_property_management"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="0" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/bedrooms"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText_bedrooms_property_management"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/bathrooms"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText_bathrooms_property_management"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="2"
                    android:text="0" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/surface"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/editText_surface_property_management"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:gravity="center"
                    android:inputType="number"
                    android:maxLength="5"
                    android:text="0" />

            </LinearLayout>

            <Button
                android:id="@+id/button_save_property_management"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:text="Save property" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
