<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.cardview.widget.CardView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:elevation="8dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                app:cardCornerRadius="4dp">

                <ImageView
                    android:id="@+id/popupAddItem_ButtonImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_text_input12"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="14dp"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/popupAddItem_Name"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/popupAddItem_Cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/cancel"
                android:textColor="@color/colorWhite"
                android:theme="@style/button_custom" />

            <Button
                android:id="@+id/popupAddItem_Add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/add"
                android:textColor="@color/colorWhite"
                android:theme="@style/button_custom" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>